--- a/src/ancorr/view/LoginView.form
+++ b/src/ancorr/view/LoginView.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ancorr.view.Login">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ancorr.view.LoginView">
   <grid id="27dc6" binding="mainPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="600" height="400"/>
@@ -54,6 +54,7 @@
                           <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
+                          <labelFor value="b7b76"/>
                           <text value="User Name:"/>
                         </properties>
                       </component>
@@ -62,6 +63,7 @@
                           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
+                          <labelFor value="7d8dc"/>
                           <text value="Password: "/>
                         </properties>
                       </component>
@@ -72,6 +74,7 @@
                           </grid>
                         </constraints>
                         <properties>
+                          <enabled value="false"/>
                           <horizontalAlignment value="0"/>
                           <text value="admin"/>
                         </properties>
@@ -133,6 +136,7 @@
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
+                      <labelFor value="242a2"/>
                       <text value="New password:"/>
                     </properties>
                   </component>
@@ -217,7 +221,7 @@
                       <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Confirm"/>
+                      <text value="&amp;Confirm"/>
                     </properties>
                   </component>
                 </children>
