--- a/src/ancorr/view/client/AppointmentView.form
+++ b/src/ancorr/view/client/AppointmentView.form
@@ -56,9 +56,11 @@
       </component>
       <component id="23493" class="javax.swing.JSpinner" binding="timeSpinner" custom-create="true">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <font size="18"/>
+        </properties>
       </component>
     </children>
   </grid>
