--- a/src/ancorr/view/employee/LoginView.form
+++ b/src/ancorr/view/employee/LoginView.form
@@ -74,7 +74,7 @@
                           </grid>
                         </constraints>
                         <properties>
-                          <enabled value="false"/>
+                          <enabled value="true"/>
                           <horizontalAlignment value="0"/>
                           <text value="admin"/>
                         </properties>
